# stm32-morse-code

./: .cproject  .gitignore  .mxproject  .project  README.md  arduino.ino  kod.c  optoelectronics-receiver Debug.launch  optoelectronics-receiver.ioc
Core/Inc/: main.h  stm32f4xx_hal_conf.h
Core/Src/: main.c
Decoder/: CMakeLists.txt  decoder.cpp  decoder.h  main.cpp  morse_code.cpp  morse_code.h  platform_host.hpp  platform_stm32.cpp  platform_stm32.h  stream.cpp  stream.hpp
USB_DEVICE/App/: usbd_cdc_if.c
report/: Makefile  document.tex
report/img/: receiver.drawio  receiver_overview.drawio  transmitter_overview.drawio
